@@ -1,17 +1,19 @@
+{% load i18n %}
+
 <ul>{% if current %}
-	<li class="page_item"><a href="/" title="Home">首页</a></li>
+	<li class="page_item"><a href="/" title="Home">{% trans "Home" %}</a></li>
 {% else %}
-	<li class="current_page_item"><a href="/" title="Home">首页</a></li>
+<li class="current_page_item"><a href="/" title="Home">{% trans "Home" %}</a></li>
 {% endif %}
 {% ifequal current 'favourites' %}
-	<li class="current_page_item"><a href="/favourites/" title="Home">收藏</a></li>
+<li class="current_page_item"><a href="/favourites/" title="Home">{% trans "Favourites" %}</a></li>
     {% else %}
-	<li class="page_item"><a href="/favourites/" title="Home">收藏</a></li>
+    <li class="page_item"><a href="/favourites/" title="Home">{% trans "Favourites" %}</a></li>
 {% endifequal %}
 {% ifequal current 'comments' %}
-	<li class="current_page_item"><a href="/comments/" title="Home">评论</a></li>
+<li class="current_page_item"><a href="/comments/" title="Home">{% trans "Comments" %}</a></li>
     {% else %}
-	<li class="page_item"><a href="/comments/" title="Home">评论</a></li>
+    <li class="page_item"><a href="/comments/" title="Home">{% trans "Comments" %}</a></li>
 {% endifequal %}
 {% for menu_item in menus %}{% ifequal current menu_item.slug %}
 	<li class="current_page_item"><a href="/{{ menu_item.slug }}/" title="Home">{{ menu_item.title }}</a></li>
